# QRD-SDK

./: .gitignore  API_REFERENCE.md  AUDIT_FIXES_SUMMARY.md  AUDIT_STATUS.md  BEST_PRACTICES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM_TOOLS.md  FHEOS-ROADMAP.md  FHEOS-Structure.md  FHEOS-spec.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_COVERAGE.md  LICENSE  Makefile  PHASE2_COMPLETION_REPORT.md  PHASE5.md  PRODUCTION_GUIDE.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_STATUS.md  PRODUCTION_TODO.md  Phase.md  QRD-SDK-AUDIT.md  README.md  ROADMAP.md  Readme.md  SDK_STATUS.md  SDK_USAGE.md  SECURITY.md  SESSION2_SUMMARY.md  SPECIFICATION.md  STATIC_VALIDATION_REPORT.md  STATUS.md  TEST_COVERAGE_DETAILED.md  TODO.md  (+14 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 01-ci.yml  02-fmt.yml  03-clippy.yml  04-test.yml  05-deterministic.yml  06-compatibility.yml  07-cross-platform.yml  08-wasm.yml  09-sdk-python.yml  10-sdk-typescript.yml  11-sdk-go.yml  12-sdk-java.yml  13-ffi.yml  14-benchmark.yml  15-benchmark-regression.yml  16-memory.yml  17-stress.yml  18-fuzz.yml  19-security.yml  20-cargo-audit.yml  21-cargo-deny.yml  22-codeql.yml  23-sanitizers.yml  24-coverage.yml  25-docs.yml  _core-cross-platform.yml  _core-heavy.yml  _core-release.yml  _core-rust.yml  _core-sdk.yml  _core-security.yml  _core-wasm.yml  artifact-hygiene.yml  benchmark-regression.yml  benchmark.yml  cargo-audit.yml  cargo-deny.yml  cargo-udeps.yml  ci.yml  clippy.yml  (+40 more)
bench/: common.rs
benches/: README.md
core/qrd-bench/: Cargo.toml  README.md
core/qrd-cli/: Cargo.toml  README.md
core/qrd-core/: Cargo.toml  README.md  entropy_test_results.txt
core/qrd-core/benches/: comprehensive_bench.rs  compression_benchmark.rs  encode_bench.rs  json_to_qrd_benchmark.rs  read_bench.rs  simple_bench.rs  streaming_bench.rs  streaming_benchmark.rs  stress_bench.rs  write_bench.rs  write_benchmark.rs
core/qrd-core/examples/: basic_reader.rs  basic_writer.rs  encoding_showcase.rs  memory_profiling.rs  partial_reads.rs  streaming_read.rs
core/qrd-core/src/: error.rs  lib.rs  memory_profiling.rs  test_vectors.rs
core/qrd-core/src/columnar/: mod.rs
core/qrd-core/src/compression/: entropy.rs  mod.rs
core/qrd-core/src/ecc/: mod.rs
core/qrd-core/src/encoding/: bit_packed.rs  byte_stream_split.rs  delta_binary.rs  delta_byte_array.rs  dictionary_rle.rs  mod.rs  plain.rs  rle.rs
core/qrd-core/src/encryption/: mod.rs
core/qrd-core/src/footer/: builder.rs  mod.rs  parser.rs
core/qrd-core/src/io/: mod.rs
core/qrd-core/src/metadata/: column_stats.rs  mod.rs
core/qrd-core/src/reader/: mod.rs  partial_reader.rs  range_reader.rs
core/qrd-core/src/rowgroup/: mod.rs
core/qrd-core/src/schema/: evolution.rs  mod.rs
core/qrd-core/src/utils/: bit_ops.rs  mod.rs  simd.rs
core/qrd-core/src/validation/: corruption.rs  index.rs  mod.rs
core/qrd-core/src/writer/: buffer_pool.rs  mod.rs  streaming_writer.rs
core/qrd-core/tests/: additional_tests.rs  advanced_fuzzing_test.rs  boundary_conditions_comprehensive_test.rs  boundary_conditions_test.rs  compression_failure_test.rs  cross_language_integration_test.rs  ecc_recovery_test.rs  edge_cases_test.rs  encoding_tests.rs  encryption_edge_cases_test.rs  encryption_fixed_test.rs  footer_parser_boundary_test.rs  fuzz_test.rs  golden_vectors_test.rs  index_bloom_test.rs  integration_test.rs  json_to_qrd_performance.rs  new_edge_case_tests.rs  new_integration_tests_a.rs  new_integration_tests_b.rs  new_schema_tests.rs  new_writer_reader_tests.rs  partial_reads_test.rs  randomized_entropy_test.rs  roundtrip_test.rs  schema_evolution_test.rs  security_hardening_test.rs  security_integration_test.rs  security_test.rs  utils_tests.rs  validation_tests.rs  writer_error_handling_test.rs  writer_reader_stress_tests.rs
core/qrd-ffi/: Cargo.toml
core/qrd-tools/: Cargo.toml  README.md
core/qrd-wasm/: Cargo.toml
core/qrd-wasm/src/: lib.rs
docs/: AI_MEMORY.md  ARCHITECTURE.md  BENCHMARKS.md  CLI_REFERENCE.md  COMPATIBILITY.md  COMPETITOR_COMPARISON.md  COMPRESSION.md  COVERAGE_GUIDE.md  DASHBOARD.md  DEPLOYMENT.md  EDGE_AI.md  FORMAT_SPEC.md  FUZZING.md  INDEX_BLOOM_FILTER.md  INDEX_BLOOM_FILTER_API.md  INDEX_IMPLEMENTATION_SUMMARY.md  INDEX_QUICKSTART.md  MEMORY_MODEL.md  PERFORMANCE.md  QUICKSTART.md  ROADMAP.md  SCHEMA_EVOLUTION.md  SCHEMA_EVOLUTION_API.md  SDKS.md  SECURITY_AUDIT.md  STABILITY.md  STREAMING_MODEL.md  THREAT_MODEL.md  USE_CASES.md  VERSIONING.md  WASM.md
docs/architecture/: ARCHITECTURE.md  README.md
docs/archive/: COMPLETION_REPORT.md  IMPLEMENTATION_STATUS_v1.md  Phase_v1.md  README.md  SDK_STATUS_v1.md
docs/benchmarks/: README.md
docs/governance/: AUDIT_IMPLEMENTATION_SUMMARY.md  README.md
docs/reports/: IMPLEMENTATION_SUMMARY.md
docs/sdk/: README.md  SDKS.md
docs/security/: README.md  SECURITY_GUIDELINES.md
docs/status/: PRODUCTION_READINESS_STATUS.md  STATUS.md
examples/: README.md
go/: README.md  qrd.c  qrd.go  qrd_test.go
java/: README.md
perbaikan/: audit-1.md  gap.md  verifikasi.md
python/: Cargo.toml  README.md  setup.py
python/qrd/: __init__.py
python/src/: lib.rs
scripts/: bootstrap.sh  install-tools.sh  validate.sh
scripts/checks/: audit.sh  benchmark.sh  check.sh  clippy.sh  coverage.sh  deny.sh  deps.sh  docs.sh  examples.sh  feature-flags.sh  ffi.sh  fmt.sh  fuzz.sh  integration.sh  licenses.sh  miri.sh  nextest.sh  outdated.sh  panic.sh  regression.sh  release.sh  reproducible.sh  sanitizers.sh  smoke.sh  stress.sh  test.sh  udeps.sh  wasm.sh
scripts/ci/: benchmark.sh  bootstrap.sh  lint.sh  release.sh  security.sh  test.sh
scripts/lib/: constants.sh  environment.sh  helpers.sh  logging.sh  parallel.sh  reporting.py  reporting.sh  timing.sh  (+1 more)
specs/: README.md  binary-layout.md  compatibility.md  compression-spec.md  encoding-spec.md  footer-spec.md  schema-spec.md
tests/: README.md
tools/: FHEOS.md
typescript/: README.md  tsconfig.json
(+97 files in other folders)
