[workspace]
name = "qrd"
version = "0.1.0"
edition = "2021"

members = [
    "core/qrd-core",
    "core/qrd-ffi",
    "core/qrd-wasm",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["QRD Contributors"]
license = "MIT"
repository = "https://github.com/zenipara/QRD-SDK"
documentation = "https://docs.qrd.dev"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
byteorder = "1.5"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Hashing & Crypto
crc32fast = "1.3"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"

# Encoding
tracing = "0.1"
thiserror = "1.0"

# Testing
proptest = "1.4"
criterion = "0.5"

# Async
tokio = { version = "1", features = ["full"] }

# Platform
num_cpus = "1.16"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
