[package]
name = "qrd-core"
version = "0.1.0"
edition = "2021"
authors = ["QRD Contributors"]
license = "MIT"
repository = "https://github.com/zenipara/QRD-SDK"
documentation = "https://docs.qrd.dev"
description = "QRD Core Engine - High-performance columnar binary format"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
zstd = { workspace = true }
lz4 = { workspace = true }
crc32fast = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
argon2 = { workspace = true }
reed-solomon-erasure = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true, optional = true }
memmap2 = "0.9"
wide = "0.7"

# Optional for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.8"

[features]
# Default features: threading for parallelization, compression codecs, and encryption
default = ["threading", "compression", "encryption"]
# Enable parallel processing using rayon (requires non-WASM platforms)
threading = ["rayon"]
# Enable compression codec support (always available, feature flag for future optionality)
compression = []
# Enable AES-256-GCM encryption and key derivation (always available, feature flag for future optionality)
encryption = []
# Enable Reed-Solomon error correction coding (always available, feature flag for future optionality)
# Note: ECC codec module is always compiled; this flag enables explicit opt-in signaling
ecc = []
# Target WASM environment (enables getrandom JS bridge for RNG)
wasm = []

[lib]
name = "qrd_core"
path = "src/lib.rs"

[[example]]
name = "basic_writer"
path = "examples/basic_writer.rs"

[[example]]
name = "basic_reader"
path = "examples/basic_reader.rs"

[[example]]
name = "streaming_read"
path = "examples/streaming_read.rs"

[[bench]]
name = "write_benchmark"
harness = false

[[bench]]
name = "compression_benchmark"
harness = false

[[bench]]
name = "streaming_benchmark"
harness = false

[[bench]]
name = "json_to_qrd_benchmark"
harness = false
