[package]
name = "qrd-wasm"
version = "0.1.0"
edition = "2021"
authors = ["QRD Contributors"]
license = "MIT"
description = "QRD WebAssembly bindings for browser and Node.js"

[dependencies]
qrd-core = { path = "../qrd-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
